# thermoradiative-power-potential

./: .gitignore  .sonarcloud.properties  integration_results.csv  integration_results.ods  integration_results_latest.ods  main.py  process_all.sh  pyproject.toml  setup.cfg
src/: constants.py  dates.py  exceptions.py
src/api/: copernicus_climate_data.py  incident_solar_radiation.py  surface_temperature_api.py
src/calculators/: coordinates_for_assessment.py  maximum_power_point_tracker.py  sky_emissivity.py  sky_temperature.py  total_power_output.py
src/plots/: extra.py  power_output.py  processed_data_loader.py  resource_assessment_choropleth_map.py  temperature_plot.py
src/processing/: process_power_output.py  save_output_between_dates.py
src/stats/: summary_statistics.py
src/surface_temperature/: surface_temperature_api.py
tests/: conftest.py
tests/api/: test_copernicus_climate_data.py
tests/calculators/: test_maximum_power_point_tracker.py  test_sky_temperature.py  test_total_power_output.py
