[tool.poetry]
name = "radiative-power-output-prediction"
version = "0.0.1"
description = ""
authors = ["Guy Keogh <guykeogh@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
scipy = "1.10.0"
mpmath = "1.2.1"
pandas = "1.5.3"
astropy = "5.2.1"

[tool.poetry.dev-dependencies]
isort = "^5.12.0"
black = "^22.8.0"
flake8 = "^6.0.0"
pytest = "^7.1.3"
mypy = "^0.991"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
