[tool.poetry]
name = "radiative-power-output-prediction"
version = "1.0.0"
description = ""
authors = ["Guy Keogh <guykeogh@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
scipy = "1.10.1"
mpmath = "1.2.1"
pandas = "1.5.3"
astropy = "5.2.1"
xarray = "^2023.2.0"
cfgrib = "^0.9.10.3"
cdsapi = "^0.5.1"
plotly = "^5.13.1"
geopandas = "^0.12.2"
global-land-mask = "^1.0.0"
kaleido = "0.2.1"
types-python-dateutil = "^2.8.19.10"

[tool.poetry.dev-dependencies]
isort = "^5.12.0"
black = "^23.1.0"
flake8 = "^6.0.0"
pytest = "^7.2.2"
mypy = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
